<resources>
    <string name="app_name">Quiz Time</string>
    <string name="quiz_categories">Quiz Categories</string>
    <string name="let_s_quiz">Let\'s Quiz</string>
    <string name="android">Android</string>
    <string name="which_topic_do_you_want_nto_improve_today">Which topic do you want\nto improve today?</string>
    <string name="confirm">Confirm</string>
    <string name="_0">0</string>
    <string name="question">Question</string>
    <string name="option_1">Option 1</string>
    <string name="option_2">Option 2</string>
    <string name="option_3">Option 3</string>
    <string name="no_data_found">No data found</string>
    <string name="correct">Correct</string>
    <string name="you_earned_10_points">You Earned 10 Points</string>
    <string name="go_to_quiz">Go To Quiz</string>
    <string name="go_to_study_source">Go To Study Source</string>
    <string name="done">Done</string>
    <string name="choose_an_option">Choose An Option</string>
    <string name="try_again">Try Again</string>
    <string name="check_answer">Check Answer</string>
    <string name="_30">30</string>
    <string name="_1_10">1/10</string>
    <string name="time_over">Time Over</string>
    <string name="_60">60</string>
    <string name="recap">Recap</string>
    <string name="home">Home</string>
    <string name="your_achievement">Your Achievement</string>

    <style name="LinearLayoutAchievementTheme">
        <item name="android:layout_width">match_parent</item>
        <item name="android:layout_height">wrap_content</item>
        <item name="android:background">@color/colorBackground</item>
        <item name="android:orientation">horizontal</item>
        <item name="android:paddingTop">8dp</item>
        <item name="android:paddingEnd">8dp</item>
        <item name="android:paddingBottom">8dp</item>
        <item name="android:weightSum">4</item>
    </style>

    <style name="CardViewHeaderQuestionTheme">
        <item name="android:layout_width">0dp</item>
        <item name="android:layout_height">wrap_content</item>
        <item name="android:layout_marginStart">8dp</item>
        <item name="android:layout_weight">1</item>
        <item name="cardBackgroundColor">@color/orange</item>
    </style>

    <style name="TextViewHeaderQuestionTheme">
        <item name="android:layout_width">match_parent</item>
        <item name="android:layout_height">wrap_content</item>
        <item name="android:layout_margin">4dp</item>
        <item name="android:textAlignment">center</item>
        <item name="android:textColor">@color/white</item>
        <item name="android:textSize">12dp</item>
    </style>
</resources>