<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Views.SelectOption">

    <WebView
        android:id="@+id/webView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/txtTopic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/android"
            android:textColor="@color/black"
            android:textSize="26sp"
            android:layout_marginTop="40dp"
            android:textStyle="bold"
            android:layout_centerHorizontal="true">

        </TextView>

        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="330dp"
            android:scaleType="centerCrop"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="130dp"
            android:src="@drawable/pic5" />

        <TextView
            android:id="@+id/txtChoose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_an_option"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:layout_marginTop="50dp"
            android:layout_marginStart="30dp"
            android:layout_below="@id/image">

        </TextView>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnQuiz"
            android:layout_width="345dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtChoose"
            android:layout_marginTop="40dp"
            android:background="@drawable/crd_user_bg1"
            android:paddingStart="50dp"
            android:paddingTop="15dp"
            android:paddingEnd="50dp"
            android:paddingBottom="15dp"
            android:layout_centerHorizontal="true"
            android:text="@string/go_to_quiz"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnInterview"
            android:layout_width="345dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/btnQuiz"
            android:background="@drawable/crd_user_bg1"
            android:paddingStart="50dp"
            android:paddingTop="15dp"
            android:paddingEnd="50dp"
            android:paddingBottom="15dp"
            android:text="@string/go_to_study_source"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="18sp" />
    </RelativeLayout>

</LinearLayout>