<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".Views.QuizActivity">

    <RelativeLayout
        android:id="@+id/layoutMain"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/layoutCounter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:padding="10dp">

            <TextView
                android:id="@+id/tvTimer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="29"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvTotalQuestions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="1/15"
                android:textColor="@color/black"
                android:textSize="20sp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layoutCounter"
            android:layout_marginTop="20dp"
            android:padding="10dp">

            <TextView
                android:id="@+id/tvWrong"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="20dp"
                android:gravity="center"
                android:text="@string/_0"
                android:textColor="@color/black"
                android:textSize="25sp"
                app:drawableStartCompat="@drawable/icons8_cross_mark_48" />

            <TextView
                android:id="@+id/tvCorrect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:drawablePadding="20dp"
                android:gravity="center"
                android:text="0"
                android:textColor="@color/black"
                android:textSize="25sp"
                app:drawableStartCompat="@drawable/icons8_done_48" />

        </RelativeLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/crdRadio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@drawable/quiz_bg"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvQuestion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:gravity="center"
                    android:text="@string/question"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    android:textSize="25sp" />


                <RadioGroup
                    android:id="@+id/radio_group"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:padding="20dp">

                    <RadioButton
                        android:id="@+id/radio_button1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checked="false"
                        android:padding="10dp"
                        android:paddingStart="20dp"
                        android:text="@string/option_1"
                        android:textSize="17sp" />

                    <RadioButton
                        android:id="@+id/radio_button2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checked="false"
                        android:padding="10dp"
                        android:paddingStart="20dp"
                        android:text="@string/option_2"
                        android:textSize="17sp" />

                    <RadioButton
                        android:id="@+id/radio_button3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checked="false"
                        android:padding="10dp"
                        android:paddingStart="20dp"
                        android:text="@string/option_3"
                        android:textSize="17sp" />

                </RadioGroup>
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/btnConfirm"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/crdRadio"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="70dp"
            android:backgroundTint="#D5F224"
            android:background="@drawable/button_bg"
            android:paddingStart="50dp"
            android:paddingTop="20dp"
            android:paddingEnd="50dp"
            android:paddingBottom="20dp"
            android:text="@string/confirm"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="18sp" />

    </RelativeLayout>

</RelativeLayout>