<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="15dp"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".Views.ResultActivity">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/colorful_confetti"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:lottie_autoPlay="true"
        app:lottie_loop="false"
        app:lottie_rawRes="@raw/colorful_confetti" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_centerHorizontal="true"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/trophy_winner" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/ltCongratulation"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@id/imageView"
        android:layout_centerHorizontal="true"
        app:lottie_autoPlay="true"
        app:lottie_loop="false"
        app:lottie_rawRes="@raw/congratulation" />

    <TextView
        android:id="@+id/tvCorrectAns"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ltCongratulation"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/correct"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvPointsEarned"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvCorrectAns"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/you_earned_10_points"
        android:textColor="@color/blue"
        android:textSize="25sp"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnDone"
        android:layout_width="345dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:text="@string/done"
        android:textSize="18sp"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/crd_user_bg1"
        android:layout_below="@id/tvPointsEarned"/>

</RelativeLayout>