<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="320dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@color/white"
            android:padding="20dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/crdUserProfile"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                app:cardCornerRadius="30dp">

                <ImageView
                    android:id="@+id/ivUserProfile"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:scaleType="centerCrop"
                    android:src="@drawable/avatar" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tvUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginStart="20dp"
                android:layout_toEndOf="@id/crdUserProfile"
                android:text="@string/which_topic_do_you_want_nto_improve_today"
                android:textColor="@color/black"
                android:textSize="18sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/crd_user_bg1"
            android:padding="20dp">

            <ImageView
                android:id="@+id/ivQuiz"
                android:layout_width="170dp"
                android:layout_height="170dp"
                android:layout_centerVertical="true"
                android:scaleType="centerCrop"
                android:src="@drawable/main" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginTop="15dp"
                android:layout_toEndOf="@id/ivQuiz"
                android:gravity="center"
                android:text="@string/let_s_quiz"
                android:textColor="@color/black"
                android:textSize="30sp" />
        </RelativeLayout>

    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/quiz_categories"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp"
        tools:listitem="@layout/quiz_topic_layout"/>

</LinearLayout>